--- a/data/conf.d/grafana.conf
+++ b/data/conf.d/grafana.conf
@@ -2,8 +2,29 @@ server {
     listen      80;
     server_name  grafana.raspberry.ru;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
-    proxy_pass http://172.17.0.1:3000;
+        return 301 https://$host$request_uri;
     }
 }
 
+server {
+    listen 443 ssl;
+    server_name  grafana.raspberry.ru;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass http://172.17.0.1:3000;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
