--- a/data/conf.d/grafana.conf
+++ b/data/conf.d/grafana.conf
@@ -16,8 +16,8 @@ server {
     server_name  grafana.raspberry.ru;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/grafana.raspberry.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/grafana.raspberry.ru/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
