--- a/data/conf.d/grafana.conf
+++ b/data/conf.d/grafana.conf
@@ -1,10 +1,6 @@
 server {
     listen      80;
-    server_name  grafana.raspberry.ru;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    server_name grafana.clever-home.space;
 
     location / {
         return 301 https://$host$request_uri;
@@ -13,7 +9,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name  grafana.raspberry.ru;
+    server_name grafana.clever-home.space;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/grafana.raspberry.ru/fullchain.pem;
