--- a/data/conf.d/prometheus_auth.conf
+++ b/data/conf.d/prometheus_auth.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name prometheus.raspberry.ru;
+    server_name prometheus.clever-home.space;
 
     location / {
         auth_basic           "Prometheus";
