--- a/data/conf.d/prometheus_auth.conf
+++ b/data/conf.d/prometheus_auth.conf
@@ -6,6 +6,6 @@ server {
         auth_basic           "Prometheus";
         auth_basic_user_file /etc/nginx/.htpasswd;
 
-        proxy_pass           http://172.17.0.1:9090/;
+        proxy_pass           http://prometheus.raspberry.home:9090/;
     }
 }
