--- a/data/conf.d/prometheus_auth.conf
+++ b/data/conf.d/prometheus_auth.conf
@@ -1,11 +1,29 @@
 server {
-    listen 80;
+    listen      80;
     server_name prometheus.clever-home.space;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name prometheus.clever-home.space;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/prometheus.raspberry.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/prometheus.raspberry.ru/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
         auth_basic           "Prometheus";
         auth_basic_user_file /etc/nginx/.htpasswd;
 
-        proxy_pass           http://prometheus.raspberry.home:9090/;
+        proxy_pass http://prometheus.raspberry.home:9090;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 }
