--- a/data/conf.d/prometheus_auth.conf
+++ b/data/conf.d/prometheus_auth.conf
@@ -12,8 +12,8 @@ server {
     server_name prometheus.clever-home.space;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/prometheus.raspberry.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/prometheus.raspberry.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/prometheus.clever-home.space/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/prometheus.clever-home.space/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
