--- a/data/conf.d/vault.conf
+++ b/data/conf.d/vault.conf
@@ -1,6 +1,26 @@
 server {
-    listen       80;
-    server_name  vault.raspberry.ru;
+    listen                  80;
+    server_name             vault.clever-home.space;
 
-    include /etc/nginx/conf.d/locations/vault-inline.conf;
+    location / {
+        return              301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen                  443 ssl;
+    server_name             vault.clever-home.space;
+    server_tokens           off;
+
+    ssl_certificate         /etc/letsencrypt/live/vault.clever-home.space/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/vault.clever-home.space/privkey.pem;
+    include                 /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam             /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass          http://vault.raspberry.home:8200;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
 }
