--- a/data/conf.d/assistant.conf
+++ b/data/conf.d/assistant.conf
@@ -1,6 +1,6 @@
 server {
     listen                  80;
-    server_name             assistant.clever-home.space;
+    server_name             assistant.clever-home.space jokcik.duckdns.org;
 
     location / {
         return              301 https://$host$request_uri;
@@ -9,7 +9,7 @@ server {
 
 server {
     listen                  443 ssl;
-    server_name             assistant.clever-home.space;
+    server_name             assistant.clever-home.space jokcik.duckdns.org;
     server_tokens           off;
 
     ssl_certificate         /etc/letsencrypt/live/assistant.clever-home.space/fullchain.pem;
