--- a/data/conf.d/assistant.conf
+++ b/data/conf.d/assistant.conf
@@ -25,3 +25,22 @@ server {
         proxy_set_header    Connection "Upgrade";
     }
 }
+
+server {
+    listen                  443 ssl;
+    server_name             jokcik.duckdns.org;
+    server_tokens           off;
+
+    ssl_certificate         /etc/letsencrypt/live/jokcik.duckdns.org/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/jokcik.duckdns.org/privkey.pem;
+    include                 /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam             /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass          http://assistant.raspberry.home:8123;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    Upgrade $http_upgrade;
+        proxy_set_header    Connection "Upgrade";
+    }
+}
