--- a/data/conf.d/jenkins.conf
+++ b/data/conf.d/jenkins.conf
@@ -1,8 +1,27 @@
 server {
-    listen       80;
-    server_name  jenkins.raspberry.ru;
+    listen                      80;
+    server_name                 jenkins.clever-home.space;
 
     location / {
-    proxy_pass http://172.17.0.1:8082;
+        return                  301 https://$host$request_uri;
     }
 }
+
+server {
+    listen                      443 ssl;
+    server_name                 jenkins.clever-home.space;
+    server_tokens               off;
+
+    ssl_certificate             /etc/letsencrypt/live/jenkins.clever-home.space/fullchain.pem;
+    ssl_certificate_key         /etc/letsencrypt/live/jenkins.clever-home.space/privkey.pem;
+    include                     /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam                 /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass              http://jenkins.raspberry.home:8082;
+        proxy_set_header        Host                $http_host;
+        proxy_set_header        X-Real-IP           $remote_addr;
+        proxy_set_header        X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
+
